[project]
name = "bus-notifier"
version = "0.1.0"
description = "Incheon bus arrival notification service with Kakao Talk alerts"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
